# qualpal-py

./: .gitignore  API_DESIGN.md  CMakeLists.txt  README.md  ROADMAP.md  Taskfile.yml  devenv.nix  pyproject.toml  test_types.py
.github/: copilot-instructions.md
.github/workflows/: pypi.yml  release.yml  test.yml
docs/source/: api.md  colors.md  conf.py  getting_started.md  index.md  tutorial.md
docs/source/exts/: github_link.py
qualpal/: __init__.py  color.py  my_module.py  palette.py  qualpal.py  utils.py
src/: color_conversions.cpp  color_conversions.h  color_distance.cpp  color_distance.h  main.cpp  palette_generation.cpp  palette_generation.h
src/qualpal/: DO_NOT_MODIFY  test.cpp
tests/: test.py  test_color.py  test_cvd_simulation.py  test_generate.py  test_get_palette.py  test_qualpal.py
