[build-system]
requires = ["scikit-build-core>=0.11", "pybind11>=3.0"]
build-backend = "scikit_build_core.build"

[project]
name = "qualpal"
version = "0.1.0"
license = "MIT"
license-files = ["LICENSE"]
description = "Automatically generate qualitative color palettes with distinct colors"
readme = "README.md"
maintainers = [{ name = "Johan Larsson", email = "johan@jolars.co" }]
authors = [{ name = "Johan Larsson", email = "johan@jolars.co" }]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[dependency-groups]
test = ["pytest", "sphinx"]
docs = ["sphinx", "furo", "sphinx-copybutton", "myst-parser", "myst-nb"]
dev = [{ include-group = "test" }, { include-group = "docs" }]

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
wheel.expand-macos-universal-tags = true
sdist.exclude = [".github"]

[tool.scikit-build.cmake.define]
CMAKE_CXX_STANDARD = "17"
CMAKE_CXX_STANDARD_REQUIRED = "ON"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
log_level = "INFO"
filterwarnings = ["error", "ignore::pytest.PytestCacheWarning"]
testpaths = ["tests"]


[tool.cibuildwheel]
build-frontend = "build[uv]"
enable = ["pypy"]
test-command = "python -m pytest tests"
test-sources = ["pyproject.toml", "tests"]
test-groups = ["test"]

[tool.cibuildwheel.pyodide]
build-frontend = { name = "build", args = ["--exports", "whole_archive"] }

[tool.cibuildwheel.ios]
build-frontend = "build"
xbuild-tools = ["cmake", "ninja"]

[tool.cibuildwheel.android]
build-frontend = "build"
environment.ANDROID_API_LEVEL = "24"

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "I",   # isort
    "ARG", # flake8-unused-arguments
    "C4",  # flake8-comprehensions
    "EM",  # flake8-errmsg
    "ICN", # flake8-import-conventions
    "G",   # flake8-logging-format
    "PGH", # pygrep-hooks
    "PIE", # flake8-pie
    "PL",  # pylint
    "PT",  # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "RET", # flake8-return
    "RUF", # Ruff-specific
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "UP",  # pyupgrade
    "YTT", # flake8-2020
    "EXE", # flake8-executable
    "NPY", # NumPy specific rules
    "PD",  # pandas-vet
]
ignore = [
    "PLR09",   # Too many X
    "PLR2004", # Magic comparison
]
isort.required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
